--- a/src/popup/scss/inputs/slider.scss
+++ b/src/popup/scss/inputs/slider.scss
@@ -16,7 +16,7 @@
 
 .slider-on {
   justify-content: flex-end;
-  background-color: $color-green-1;
+  background-color: $color-blue-1;
 }
 
 .slider-off {
